--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: go
+dist: bionic
 go:
   - "1.12.x"
   - "1.13.x"
   - "1.14.x"
 before_script:
+  - find /lib/modules/5.3.0-1029-gcp
   # make sure we keep path in tact when we sudo
   - sudo sed -i -e 's/^Defaults\tsecure_path.*$//' /etc/sudoers
   # modprobe ip_gre or else the first gre device can't be deleted
@@ -11,8 +13,8 @@ before_script:
   # modprobe nf_conntrack for the conntrack testing
   - sudo modprobe nf_conntrack
   - sudo modprobe nf_conntrack_netlink
-  - sudo modprobe nf_conntrack_ipv4
-  - sudo modprobe nf_conntrack_ipv6
+  - sudo modprobe nf_conntrack_ipv4 || true
+  - sudo modprobe nf_conntrack_ipv6 || true
   - sudo modprobe sch_hfsc
 install:
   - go get -v -t ./...
